--- a/lehoi.html
+++ b/lehoi.html
@@ -105,7 +105,7 @@
                 <h2>Lễ Hội Dừa Bến Tre</h2>
                 <p>Lễ hội Dừa Bến Tre là sự kiện quan trọng diễn ra 4 năm một lần...</p>
                 <video controls>
-                    <source src="video/vd1.mp4" type="video/mp4">
+                    <source src="https://res.cloudinary.com/dycwnpaza/video/upload/v1738760457/vd1_jq82pr.mp4" type="video/mp4">
                     Trình duyệt của bạn không hỗ trợ thẻ video.
                 </video>
             </div>
